Make assets CRUD and create role-base guard
